@@ -16,11 +16,8 @@ keywords: netapp, solutions, automation, ansible, what's new
 [.lead]
 Overview of the most recent automation capabilities for NetApp solutions.
 
-=== Getting Started with Solution automation
+=== Getting Started with solution automation
 * link:automation/automation_rhel_centos_setup.html[Setup the Ansible Control Node for CLI deployments on RHEL / CentOS]
-* link:automation/automation_ubuntu_debian_setup.html[Setup the Ansible Control Node for CLI deployments on Ubuntiu/ Debian]
+* link:automation/automation_ubuntu_debian_setup.html[Setup the Ansible Control Node for CLI deployments on Ubuntu / Debian]
 * link:automation/setup_awx.html[Setup Ansible Tower or AWX for Tower / AWX deployments]
 
-=== Solutions with automated deployment
-* link:automation/deploy_mellanox_cli.html[Mellanox switch deployment via CLI]
-* link:automation/deploy_mellanox_awx.html[Mellanox switch deployment via Ansible Tower or AWX]
