@@ -6,17 +6,18 @@ entries:
     url: /automation/automation_introduction.html
   - title: Setup the Ansible control node (For CLI based deployments)
     entries:
-      - title: For RHEL/CentOS machines
+      - title: For RHEL/ CentOS machines
         url: /automation/automation_rhel_centos_setup.html
-      - title: For Ubuntu/Debian machines
+      - title: For Ubuntu / Debian machines
         url: /automation/automation_ubuntu_debian_setup.html
-  - title: Setup AWX/Ansible Tower (For AWX/Tower based deployments)
+  - title: Setup AWX / Ansible Tower (For AWX / Tower based deployments)
     url: /automation/setup_awx.html
   - title: Request automation
     url: "https://github.com/NetAppDocs/netapp-solutions/issues/new?body=[Request%20Automation]%0d%0a%0d%0aSolution%20Name:%20%0d%0aRequest%20Title:%20%0d%0aDescription:%0d%0aSuggestions:&title=Request%20Automation%20-%20<request_title>"
-  - title: Deployment examples
-    entries:
-      - title: Mellanox Deployment (via CLI)
-        url: /automation/deploy_mellanox_cli.html
-      - title: Mellanox Deployment (via AWX/Ansible Tower)
-        url: /automation/deploy_mellanox_awx.html
+#  - title: Deployment examples
+#    entries:
+#      - title: Mellanox Deployment (via CLI)
+#        url: /automation/deploy_mellanox_cli.html
+#      - title: Mellanox Deployment (via AWX/Ansible Tower)
+#        url: /automation/deploy_mellanox_awx.html
+
