@@ -73,12 +73,12 @@ homepage:
         - title: "What's New"
           summary: Check out the latest automation capabilities in NetApp solutions
           url: automation-whatsnew.html
-        - title: "Videos and Demos"
-          summary: Short videos / demos about NetApp solutions automation
-          url: automation-videos.html
-        - title: "Blogs"
-          summary: Technical blogs highlighting automation capabilities in NetApp solutions
-          url: automation-blogs.html
+#        - title: "Videos and Demos"
+#          summary: Short videos / demos about NetApp solutions automation
+#          url: automation-videos.html
+#        - title: "Blogs"
+#          summary: Technical blogs highlighting automation capabilities in NetApp solutions
+#          url: automation-blogs.html
         - title: Request Automation
           summary: Want to request new automation?  Fill out the request form here.
           url: https://github.com/NetAppDocs/netapp-solutions/issues/new?body=[Request%20Automation]%0d%0a%0d%0aSolution%20Name:%20%0d%0aRequest%20Title:%20%0d%0aDescription:%0d%0aSuggestions:&title=Request%20Automation%20-%20%3Crequest_title%3E
