@@ -19,6 +19,7 @@ Recent changes to the NetApp Solutions collateral.  The most recent changes are 
 [width=100%,cols="2, 4, 10",grid="all"]
 |===
 | *Date* | *Solution Area* | *Description of change*
+| 03/04/2021 | Solution Automation | New content: getting started with NetApp solution automation
 | 02/18/2021 | VMware Virtualization | Added VMware vSphere for ONTAP TR
 | 02/16/2021 | AI Edge Inferencing | Added automated deployment steps
 | 02/03/2021 | SAP, SAP HANA | Added landing page for all SAP and SAP HANA content
